fix file paths and structure

--- a/compSci.html
+++ b/compSci.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Computer Science</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -24,12 +24,12 @@
     </div>
     <div class="item">
         <div class="Lynx">
-            <a href="../subPages/lynx.html">
+            <a href="./subPages/lynx.html">
                 <h4>
                     Lynx
                 </h4>
                 <img
-                    src="../../images/lynx/CoverLynx.png"
+                    src="./images/lynx/CoverLynx.png"
                     alt="Lynx Cover Image"
                     class="responsive"
                 />
@@ -41,12 +41,12 @@
             </a>
         </div>
         <div class="Class Connect">
-            <a href="../subPages/classConnect.html">
+            <a href="./subPages/classConnect.html">
                 <h4>
                     Class Connect
                 </h4>
                 <img
-                    src="../../images/classConnect/CoverClassConnect.jpeg"
+                    src="./images/classConnect/CoverClassConnect.jpeg"
                     alt="Class Connect Cover Image"
                     class="responsive"
                 />
@@ -57,12 +57,12 @@
             </a>
         </div>
         <div class="Google Colab">
-            <a href="../subPages/googleColab.html">
+            <a href="./subPages/googleColab.html">
                 <h4>
                     Google Colabratory
                 </h4>
                 <img
-                    src="../../images/colab/CoverColab.jpeg"
+                    src="./images/colab/CoverColab.jpeg"
                     alt="Colab Cover Image"
                     class="responsive"
                 />
@@ -75,12 +75,12 @@
             </a>
         </div>
         <div class="Data Visualization">
-            <a href="../subPages/dataVisulization.html">
+            <a href="./subPages/dataVisulization.html">
                 <h4>
                     Data Visualization
                 </h4>
                 <img
-                    src="../../images/dataVis/CoverDataVis.png"
+                    src="./images/dataVis/CoverDataVis.png"
                     alt="Data Visualization Cover Image"
                     class="responsive"
                 />
@@ -93,12 +93,12 @@
             </a>
         </div>
         <div class="emoney">
-            <a href="../subPages/incentiveEngagement.html">
+            <a href="./subPages/incentiveEngagement.html">
                 <h4>
                     Incentive Engagement
                 </h4>
                 <img
-                    src="../../images/emoney/coverIncentive.png"
+                    src="./images/emoney/coverIncentive.png"
                     alt="Lynx Cover Image"
                     class="responsive"
                 />
@@ -116,10 +116,10 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="index.html">about me</a></li>
-            <li><a href="compSci.html" class="active">computer science</a></li>
-            <li><a href="uxuiDev.html">ux/ui development</a></li>
-            <li><a href="extra.html">extra</a></li>
+            <li><a href="./index.html">about me</a></li>
+            <li><a href="./compSci.html" class="active">computer science</a></li>
+            <li><a href="./uxuiDev.html">ux/ui development</a></li>
+            <li><a href="./extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
