--- a/extra.html
+++ b/extra.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Extra</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -24,7 +24,7 @@
     </div>
     <figure>
         <img 
-            src="../../images/extra/joMalone.jpeg"
+            src="./images/extra/joMalone.jpeg"
             alt="Jo Malone Image"
             class="responsive"
         />
@@ -32,7 +32,7 @@
     </figure>
     <figure>
         <img 
-            src="../../images/extra/tiffany.jpeg"
+            src="./images/extra/tiffany.jpeg"
             alt="Tiffany & Co. Image"
             class="responsive"
         />
@@ -40,7 +40,7 @@
     </figure>
     <figure>
         <img 
-            src="../../images/extra/architecture.jpeg"
+            src="./images/extra/architecture.jpeg"
             alt="Architectural Digest Image"
             class="responsive"
         />
@@ -48,10 +48,10 @@
     </figure>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="index.html">about me</a></li>
-            <li><a href="compSci.html">computer science</a></li>
-            <li><a href="uxuiDev.html">ux/ui development</a></li>
-            <li><a href="extra.html" class="active">extra</a></li>
+            <li><a href="./index.html">about me</a></li>
+            <li><a href="./compSci.html">computer science</a></li>
+            <li><a href="./uxuiDev.html">ux/ui development</a></li>
+            <li><a href="./extra.html" class="active">extra</a></li>
         </ul>
     </nav>
 </body>
