--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -24,7 +24,7 @@
             About Me
         </h3>
         <img
-            src="../../images/sct56_headshot.png"
+            src="./images/sct56_headshot.png"
             alt="headshot"
             class="responsive"
         />
@@ -179,10 +179,10 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="index.html" class="active">about me</a></li>
-            <li><a href="compSci.html">computer science</a></li>
-            <li><a href="uxuiDev.html">ux/ui development</a></li>
-            <li><a href="extra.html">extra</a></li>
+            <li><a href="./index.html" class="active">about me</a></li>
+            <li><a href="./compSci.html">computer science</a></li>
+            <li><a href="./uxuiDev.html">ux/ui development</a></li>
+            <li><a href="./extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
