--- a/subPages/barnesNoble.html
+++ b/subPages/barnesNoble.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Barnes & Noble</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -28,22 +28,22 @@
             an already existing site. I chose Barnes & Noble.
         </p>
         <img
-            src="../../images/barnesNoble/homepage.jpeg"
+            src="../images/barnesNoble/homepage.jpeg"
             alt="B&N Hompage Image"
             class="responsive"
         />
         <img
-            src="../../images/barnesNoble/internal.jpeg"
+            src="../images/barnesNoble/internal.jpeg"
             alt="B&N Internal Image"
             class="responsive"
         />
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/index.html">about me</a></li>
-            <li><a href="../mainPages/compSci.html">computer science</a></li>
-            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
-            <li><a href="../mainPages/extra.html">extra</a></li>
+            <li><a href="../index.html">about me</a></li>
+            <li><a href="../compSci.html">computer science</a></li>
+            <li><a href="../uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
