--- a/subPages/classConnect.html
+++ b/subPages/classConnect.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Class Connect</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -28,37 +28,37 @@
             This is targeted towards online learning and working from home.
         </p>
         <img
-            src="../../images/classConnect/homepage.png"
+            src="../images/classConnect/homepage.png"
             alt="Hompage Image"
             class="responsive"
         />
         <img
-            src="../../images/classConnect/TeacherComments.png"
+            src="../images/classConnect/TeacherComments.png"
             alt="Comments Image"
             class="responsive"
         />
         <img
-            src="../../images/classConnect/calendar.png"
+            src="../images/classConnect/calendar.png"
             alt="Calendar Image"
             class="responsive"
         />
         <img
-            src="../../images/classConnect/teacherChat.png"
+            src="../images/classConnect/teacherChat.png"
             alt="Chat Image"
             class="responsive"
         />
         <img
-            src="../../images/classConnect/tutors.png"
+            src="../images/classConnect/tutors.png"
             alt="Tutors Image"
             class="responsive"
         />
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/index.html">about me</a></li>
-            <li><a href="../mainPages/compSci.html">computer science</a></li>
-            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
-            <li><a href="../mainPages/extra.html">extra</a></li>
+            <li><a href="../index.html">about me</a></li>
+            <li><a href="../compSci.html">computer science</a></li>
+            <li><a href="../uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
