--- a/subPages/lynx.html
+++ b/subPages/lynx.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Lynx</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -33,15 +33,15 @@
             autoplay
             class="responsive"
             poster="../../images/lynx/CoverLynx.png">
-                <source src="../../images/lynx/lynxDemo.mp4" type="video/mp4" />
+                <source src="../images/lynx/lynxDemo.mp4" type="video/mp4" />
         </video>
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/index.html">about me</a></li>
-            <li><a href="../mainPages/compSci.html">computer science</a></li>
-            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
-            <li><a href="../mainPages/extra.html">extra</a></li>
+            <li><a href="../index.html">about me</a></li>
+            <li><a href="../compSci.html">computer science</a></li>
+            <li><a href="../uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
