--- a/uxuiDev.html
+++ b/uxuiDev.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - UX/UI Development</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -24,12 +24,12 @@
     </div>
     <div class="item">
         <div class="B&N">
-            <a href="../subPages/barnesNoble.html">
+            <a href="./subPages/barnesNoble.html">
                 <h4>
                 Barnes & Noble 
                 </h4>
                 <img
-                    src="../../images/barnesNoble/coverBarnesNoble.png"
+                    src="./images/barnesNoble/coverBarnesNoble.png"
                     alt="B&N Cover Image"
                     class="responsive"
                 />
@@ -40,12 +40,12 @@
             </a>
         </div>
         <div class="Guardian">
-            <a href="../subPages/guardian.html">
+            <a href="./subPages/guardian.html">
                 <h4>
                 The Guardian
                 </h4>
                 <img
-                    src="../../images/guardian/coverGuardian.png"
+                    src="./images/guardian/coverGuardian.png"
                     alt="Guardian Cover Image"
                     class="responsive"
                 />
@@ -57,12 +57,12 @@
             </a>
         </div>
         <div class="Syzo">
-            <a href="../subPages/syzokryli.html">
+            <a href="./subPages/syzokryli.html">
                 <h4>
                 Syzokryli Dance Ensemble
                 </h4>
                 <img
-                    src="../../images/syzo/syzoLogo.png"
+                    src="./images/syzo/syzoLogo.png"
                     alt="Syzokryli Cover Image"
                     class="responsive"
                 />
@@ -76,10 +76,10 @@
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="index.html">about me</a></li>
-            <li><a href="compSci.html">computer science</a></li>
-            <li><a href="uxuiDev.html" class="active">ux/ui development</a></li>
-            <li><a href="extra.html">extra</a></li>
+            <li><a href="./index.html">about me</a></li>
+            <li><a href="./compSci.html">computer science</a></li>
+            <li><a href="./uxuiDev.html" class="active">ux/ui development</a></li>
+            <li><a href="./extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
