--- a/subPages/guardian.html
+++ b/subPages/guardian.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - The Guardian</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -28,44 +28,44 @@
             Guardians original and classic look, it takes on more of a 
             editorial approach.
         </p>
-        <a href="../../images/guardian/DesignPresentation.pdf">To download a presentation of my project, click here.</a>
+        <a href="../images/guardian/DesignPresentation.pdf">To download a presentation of my project, click here.</a>
         <img
-            src="../../images/guardian/mobile1.png"
+            src="../images/guardian/mobile1.png"
             alt="Mobile Home Image"
             class="responsive"
         />
         <img
-            src="../../images/guardian/mobile2.png"
+            src="../images/guardian/mobile2.png"
             alt="Mobile Article Image"
             class="responsive"
         />
         <img
-            src="../../images/guardian/tablet1.png"
+            src="../images/guardian/tablet1.png"
             alt="Tablet Home Image"
             class="responsive"
         />
         <img
-            src="../../images/guardian/tablet2.png"
+            src="../images/guardian/tablet2.png"
             alt="Tablet Article Image"
             class="responsive"
         />
         <img
-            src="../../images/guardian/desktop1.png"
+            src="../images/guardian/desktop1.png"
             alt="Desktop Home Image"
             class="responsive"
         />
         <img
-            src="../../images/guardian/desktop2.png"
+            src="../images/guardian/desktop2.png"
             alt="Desktop Article Image"
             class="responsive"
         />
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/index.html">about me</a></li>
-            <li><a href="../mainPages/compSci.html">computer science</a></li>
-            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
-            <li><a href="../mainPages/extra.html">extra</a></li>
+            <li><a href="../index.html">about me</a></li>
+            <li><a href="../compSci.html">computer science</a></li>
+            <li><a href="../uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
