--- a/subPages/syzokryli.html
+++ b/subPages/syzokryli.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCT - Syzokryli</title>
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <button class="menu">
@@ -30,37 +30,37 @@
         </p>
         <a href="http://syzokryli.org/">Website still in the works. Visit the full website here in a month!</a>
         <img
-            src="../../images/syzo/hopepage.png"
+            src="../images/syzo/hopepage.png"
             alt="Syzo Homepage Image"
             class="responsive"
         />
         <img
-            src="../../images/syzo/about.png"
+            src="../images/syzo/about.png"
             alt="Syzo About Image"
             class="responsive"
         />
         <img
-            src="../../images/syzo/leaders.png"
+            src="../images/syzo/leaders.png"
             alt="Syzo Leaders Image"
             class="responsive"
         />
         <img
-            src="../../images/syzo/gallery.png"
+            src="../images/syzo/gallery.png"
             alt="Syzo Gallery Image"
             class="responsive"
         />
         <img
-            src="../../images/syzo/camps.png"
+            src="../images/syzo/camps.png"
             alt="Syzo Camps Image"
             class="responsive"
         />
     </div>
     <nav id ="navigateHere">
         <ul>
-            <li><a href="../mainPages/index.html">about me</a></li>
-            <li><a href="../mainPages/compSci.html">computer science</a></li>
-            <li><a href="../mainPages/uxuiDev.html">ux/ui development</a></li>
-            <li><a href="../mainPages/extra.html">extra</a></li>
+            <li><a href="../index.html">about me</a></li>
+            <li><a href="../compSci.html">computer science</a></li>
+            <li><a href="../uxuiDev.html">ux/ui development</a></li>
+            <li><a href="../extra.html">extra</a></li>
         </ul>
     </nav>
 </body>
